# counterfactual-conversation-emulation

./: .gitignore  README.md  phase1_problem_formalization.md  pyproject.toml
configs/: agent_policy.yaml  rubric_judge.yaml  sources.yaml
dataset_freezes/: phase2_v1.json
docs/: cross_vendor_judge_runbook.md  phase2_data_construction_review.md  phase3_ground_truth_results.md  phase3_rubric_judge_decision.md  phase4_5_summary_slides.md  phase5_main_experiment.md
scripts/: build_counselbench.py  build_dataset.py  compute_effect.py  download_sources.py  freeze_dataset.py  generate_agent_actions.py  inspect_dataset.py  run_phase5.py  score_dataset.py
src/cce_data/: __init__.py  agent.py  build.py  cli.py  counselbench.py  download.py  effect.py  freeze.py  inspect.py  rubric.py  schema.py  text.py
src/cce_data/adapters/: __init__.py  aci_bench.py  meddialog.py  mts_dialog.py  primock57.py
src/cce_data/estimators/: __init__.py  density_ratio.py  dm.py  mips.py  offcem.py  real_runner.py  synthetic_toy.py
tests/: test_counselbench.py  test_dm.py  test_effect.py  test_mips.py  test_offcem.py  test_rubric_providers.py  test_text_extraction.py
